--- a/src/styles/mobileNewsDetail.less
+++ b/src/styles/mobileNewsDetail.less
@@ -64,8 +64,8 @@
             display: none;
             position: fixed;
             z-index: 888;
-            background-color: rgba(118,195,182);
-            width:30%;
+            background-color: rgba(42, 133, 113, 1);;
+            width:100%;
         }
         h1 {
           text-align: center;
@@ -78,8 +78,7 @@
         }
       }
       .subNav {
-        border-bottom: solid 1px #e5e3da;
-        padding: 0.13rem;
+        border-bottom: solid 1px #458c7c;
         cursor: pointer;
         font-size: 0.18rem;
         font-family: Source Han Sans CN;
@@ -88,6 +87,9 @@
         background: url(../images/youjiantou.png) no-repeat;
         background-position: 95% 50%;
         a {
+          display:block;
+          width:100%;
+          padding: 0.13rem;
           font-size: 0.18rem;
           font-family: Source Han Sans CN;
           font-weight: 400;
@@ -96,7 +98,7 @@
       }
       .subNav:hover {
         a {
-          color: rgba(42, 133, 113, 1);
+         
         }
   
         border-left: 4px solid rgba(42, 133, 113, 1);
@@ -153,16 +155,32 @@
               color: rgba(204, 204, 204, 1);
               i {
                 margin-right: 0.1rem;
+                font-size:0.12rem;
               }
             }
           }
           .artice {
             margin-top: 0.45rem;
+            .share{
+              text-align: right;
+              font-size:0.22rem;
+              margin: 0.3rem 0;
+              span{
+                font-size:0.16rem;
+              }
+              svg{
+                cursor:pointer;
+                margin-left: 0.10rem;
+            }
+            }
             p {
               font-size: 0.16rem;
               font-family: Source Han Sans CN;
               font-weight: 400;
               color: rgba(51, 51, 51, 1);
+            }
+            .artice_foot{
+              margin:0.5rem 0.2rem;
             }
           }
         }
