--- a/src/styles/mylibray.less
+++ b/src/styles/mylibray.less
@@ -1,7 +1,6 @@
 body {
   background-color: #f7f9f9;
 }
-
 .main {
   .main-tab {
     cursor: pointer;
@@ -23,6 +22,7 @@ body {
     margin-bottom: 18px;
 
     .profile {
+      margin-bottom:20px;
       span {
         font-size: 20px;
         font-family: Source Han Sans CN;
@@ -66,6 +66,7 @@ body {
             font-family: Source Han Sans CN;
             font-weight: 300;
             color: rgba(153, 153, 153, 1);
+            margin:10px 0;
           }
         }
 
@@ -177,7 +178,7 @@ body {
       &.action {
         background: rgba(230, 240, 238, 1);
         box-shadow: 0px 2px 6px 0px rgba(129, 200, 200, 0.5);
-        border-radius: 4px;
+        width:174px;
       }
 
       .serve-center {
@@ -206,7 +207,15 @@ body {
     background: rgba(255, 255, 255, 1);
     box-shadow: 0px 0px 7px 1px rgba(204, 204, 204, 0.5);
     border-radius: 4px;
-
+    .allSelect{
+      display:none;
+      padding:10px;
+      border:1px solid rgba(42, 133, 113, 1);
+      color:rgba(42, 133, 113, 1);
+      background-color: #fff;
+      outline: none;
+      border-radius:4px;
+    }
     .table-head {
       font-size: 22px;
       font-family: Source Han Sans CN;
@@ -313,7 +322,6 @@ body {
 
   .data-display {
     margin-top: 19px;
-
     .data-left {
       #bookNum{
         width:100%;
@@ -323,13 +331,11 @@ body {
         border-bottom: 4px solid #f4f7fb;
       }
     }
-
     .data-left,
     .data-right {
-      width: 48%;
-      
+      width: 49%;
       box-shadow: 0px 2px 9px 1px rgba(204, 204, 204, 0.5);
-      background-color: #f7f9f9;
+      background-color: #fff;
     }
 
     .data-top {
