--- a/src/styles/newsDetail.less
+++ b/src/styles/newsDetail.less
@@ -1,5 +1,5 @@
-.top-header{
-  display:none;
+.top-header {
+  display: none;
 }
 .main {
   .main-nav {
@@ -215,6 +215,7 @@
       background: rgba(255, 255, 255, 1);
       box-shadow: 0px 0px 7px 1px rgba(204, 204, 204, 0.5);
       border-radius: 4px;
+      min-height: 700px;
       .list_top {
         font-size: 18px;
         font-family: Source Han Sans CN;
@@ -248,11 +249,41 @@
         }
         .artice {
           margin-top: 45px;
+          .share {
+            text-align: right;
+            font-size: 22px;
+            margin: 30px 0;
+            span {
+              font-size: 16px;
+            }
+            svg {
+              cursor: pointer;
+              margin-left: 10px;
+            }
+          }
           p {
             font-size: 16px;
             font-family: Source Han Sans CN;
             font-weight: 400;
             color: rgba(51, 51, 51, 1);
+          }
+          .artice_foot {
+            margin: 50px 20px;
+            p {
+              margin-top: 10px;
+              span {
+                margin-right: 20px;
+                font-size: 16px;
+                font-family: Source Han Sans CN;
+                font-weight: 400;
+                color: rgba(51, 51, 51, 1);
+              }
+              a {
+                &:hover {
+                  color: rgba(42, 133, 113, 1);
+                }
+              }
+            }
           }
         }
       }
